; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_sock.c_sk_ns_capable.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_sock.c_sk_ns_capable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.user_namespace = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sk_ns_capable(%struct.sock* %0, %struct.user_namespace* %1, i32 %2) #0 {
  %4 = alloca %struct.sock*, align 8
  %5 = alloca %struct.user_namespace*, align 8
  %6 = alloca i32, align 4
  store %struct.sock* %0, %struct.sock** %4, align 8
  store %struct.user_namespace* %1, %struct.user_namespace** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.sock*, %struct.sock** %4, align 8
  %8 = getelementptr inbounds %struct.sock, %struct.sock* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.user_namespace*, %struct.user_namespace** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i64 @file_ns_capable(i32 %11, %struct.user_namespace* %12, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %3
  %17 = load %struct.user_namespace*, %struct.user_namespace** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i64 @ns_capable(%struct.user_namespace* %17, i32 %18)
  %20 = icmp ne i64 %19, 0
  br label %21

21:                                               ; preds = %16, %3
  %22 = phi i1 [ false, %3 ], [ %20, %16 ]
  %23 = zext i1 %22 to i32
  ret i32 %23
}

declare dso_local i64 @file_ns_capable(i32, %struct.user_namespace*, i32) #1

declare dso_local i64 @ns_capable(%struct.user_namespace*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
